# AV-Chatbot

./: main.py  pyproject.toml
Core/: queries.py
Main/: main.py
Main/Core/: apis.py  queries.py
Main/assets/: TextInformation.py
