[tool.poetry]
name = "azkavisionchabot"
version = "0.1.0"
description = ""
authors = ["ychamel <ychamel@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.8"
streamlit = "^1.31.1"
openai = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
