[tool.poetry]
name = "av-chatbot"
version = "0.1.0"
description = ""
authors = ["ychamel <ychamel@hotmail.com>"]
readme = "README.md"
packages = [{include = "Main"}]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.31.1"
openai = "^1.12.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
